# KolektifAPI

./: .gitignore  .gitpod.yml  Dockerfile  Procfile  README.md  basla.py  buildozer.spec  docker-compose.yml  konsolTaban.py  okteto.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: Android.yml
CLI/: __init__.py
Kolektif/: __init__.py  istekler.json
Kolektif/Routers/: _hata.py  akaryakit.py  anaSayfa.py  bim.py  deprem.py  doviz.py  eczane.py  ezan.py  google.py  haber.py  piiz.py  sahibinden.py  trendyol_kategori.py  trendyol_urun.py  ucak.py  udemy.py  youtube.py
Kolektif/Static/: stil.css
Kolektif/Templates/: anaSayfa.html  taban.html
Kolektif/_endpointler/: _hata.py  akaryakit.py  anaSayfa.py  bim.py  deprem.py  doviz.py  eczane.py  ezan.py  google.py  haber.py  hava.py  masal.py  trendyol.py  ucak.py  udemy.py  youtube.py
Kolektif/static/: stil.css
Kolektif/templates/: anaSayfa.html  haberSayfasi.html  taban.html  veriSayfasi.html
konsolTaban/_degiskenler/: banner.py
konsolTaban/_evrensel/: tanimlar.py
