[tool.poetry]
name = "KolektifAPI | @KekikAkademi"
version = "1.0"
description = "Flask Tabanlı KekikSpatula API"
authors = ["keyiflerolsun <keyiflerolsun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.2.1"
setuptools = "^63.2.0"
wheel = "^0.37.1"
Kekik = "^1.0.2"
user-agents = "^2.2.0"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
Flask-Sitemap = "^0.4.0"
waitress = "^2.1.2"